--- a/package.json
+++ b/package.json
@@ -24,17 +24,14 @@
 	"dependencies": {
 		"@emotion/react": "^11.10.5",
 		"@emotion/styled": "^11.10.5",
-		"@redux-devtools/extension": "^3.2.3",
 		"axios": "^1.2.1",
 		"clsx": "^1.2.1",
+		"effector": "^22.4.1",
+		"effector-react": "^22.3.4",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-helmet": "^6.1.0",
-		"react-redux": "^7.2.9",
-		"react-redux-toastr": "^7.6.10",
 		"react-router-dom": "^6.4.5",
-		"redux": "^4.2.0",
-		"redux-thunk": "^2.4.2",
 		"socket.io-client": "^4.5.4"
 	},
 	"devDependencies": {
@@ -42,9 +39,9 @@
 		"@types/react": "^18.0.26",
 		"@types/react-dom": "^18.0.9",
 		"@types/react-helmet": "^6.1.6",
-		"@types/react-redux-toastr": "^7.6.2",
 		"@typescript-eslint/parser": "^5.46.1",
 		"@vitejs/plugin-react": "^3.0.0",
+		"effector-logger": "^0.13.4",
 		"eslint": "^8.29.0",
 		"typescript": "^4.9.4",
 		"vite": "^4.0.1"
