--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,8 @@
 		"isolatedModules": true,
 		"noEmit": true,
 		"jsx": "react-jsx",
-		"baseUrl": "./"
+		"baseUrl": "./",
+		"types": ["vitest/globals"]
 	},
 	"include": ["src"],
 	"references": [{ "path": "./tsconfig.node.json" }]
