--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
 		"clear-cache": "git rm -r --cached .",
 		"test": "vitest",
 		"test:ui": "vitest --ui",
-		"coverage": "vitest run --coverage"
+		"coverage": "vitest run --coverage",
+		"lint": "tsc && eslint . --ext .ts --ext .tsx --fix --max-warnings=0"
 	},
 	"type": "module",
 	"repository": {
@@ -48,9 +49,15 @@
 		"effector-logger": "^0.13.4",
 		"eslint": "^8.29.0",
 		"happy-dom": "^8.1.0",
+		"husky": "^8.0.2",
 		"react-test-renderer": "^18.2.0",
 		"typescript": "^4.9.4",
 		"vite": "^4.0.1",
 		"vitest": "^0.25.8"
+	},
+	"husky": {
+		"hooks": {
+			"pre-commit": "tsc && npm run lint:fix && npm run test"
+		}
 	}
 }
