--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 		"clsx": "^1.2.1",
 		"effector": "^22.4.1",
 		"effector-react": "^22.3.4",
+		"husky": "^4.3.8",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-helmet": "^6.1.0",
@@ -43,13 +44,15 @@
 		"@types/react": "^18.0.26",
 		"@types/react-dom": "^18.0.9",
 		"@types/react-helmet": "^6.1.6",
+		"@typescript-eslint/eslint-plugin": "^5.46.1",
 		"@typescript-eslint/parser": "^5.46.1",
 		"@vitejs/plugin-react": "^3.0.0",
 		"@vitest/ui": "^0.25.8",
 		"effector-logger": "^0.13.4",
 		"eslint": "^8.29.0",
+		"eslint-plugin-react": "^7.31.11",
+		"eslint-plugin-react-hooks": "^4.6.0",
 		"happy-dom": "^8.1.0",
-		"husky": "^8.0.2",
 		"react-test-renderer": "^18.2.0",
 		"typescript": "^4.9.4",
 		"vite": "^4.0.1",
@@ -57,7 +60,7 @@
 	},
 	"husky": {
 		"hooks": {
-			"pre-commit": "tsc && npm run lint:fix && npm run test"
+			"pre-commit": "tsc && npm run lint && npm run test"
 		}
 	}
 }
