--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
 		"socket.io-client": "^4.5.4"
 	},
 	"devDependencies": {
+		"@emotion/babel-plugin": "^11.10.5",
 		"@types/node": "^18.11.14",
 		"@types/react": "^18.0.26",
 		"@types/react-dom": "^18.0.9",
