--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ VITE_API_ENDPOINT=http://localhost:5050
 VITE_CLIENT_PATH_DESKTOP=http://localhost:3030
 VITE_CLIENT_PATH_MOBILE=http://m.localhost:3030
 VITE_MAX_WIDTH=767
+VITE_LANGUAGE=ru-RU
